--- a/Arithmetic.html
+++ b/Arithmetic.html
@@ -23,5 +23,5 @@
 </template>
 <template name="results">
   <h2>Results</h2>
-  {{data}}
+  {{> reactiveTable collection=data settings=settings}}
 </template>
