Tabular presentation of quiz results
Also hides Correct Answer column if no wrong answers

--- a/Arithmetic.html
+++ b/Arithmetic.html
@@ -23,5 +23,5 @@
 </template>
 <template name="results">
   <h2>Results</h2>
-  {{> reactiveTable collection=data settings=settings}}
+  {{> reactiveTable settings=settings class="table table-bordered table-hover"}}
 </template>
