--- a/Arithmetic.html
+++ b/Arithmetic.html
@@ -1,100 +1,105 @@
 <head>
   <title>Arithmetic</title>
 </head>
+
 <body>
   <div class="row col-md-6 col-md-offset-3 centered">
-  <h1>Arithmetic Quiz</h1>
-  <p>
-  {{> loginButtons}}
-  </p>
+    <h1>Arithmetic Quiz</h1>
+    <p>
+      {{> loginButtons}}
+    </p>
   </div>
 </body>
 <template name="main-menu">
   <div class="row col-md-6 col-md-offset-3 centered">
-    <a href="/quiz"><button id="newquiz">Begin New Quiz</button></a>
-    <a href="#"><button id="pastresults">View Past Results</button></a>
+    <a href="/quiz">
+      <div class="row menu-button"><button class="btn btn-success col-md-4 col-md-offset-4 centered" id="newquiz">Begin New Quiz</button></div>
+    </a>
+    <a href="#">
+      <div class="row menu-button"><button class="btn btn-warning col-md-4 col-md-offset-4 centered" id="pastresults">View Past Results</button></div>
+    </a>
     {{#if isInRole 'teacher'}}
-      <a href="/admin"><button id="teacherarea">Teacher Area</button></a>
+    <a href="/admin">
+      <div class="row menu-button"><button class="btn btn-danger col-md-4 col-md-offset-4 centered" id="teacherarea">Teacher Area</button></div>
+    </a>
     {{/if}}
   </div>
 </template>
 
 <template name="quiz">
-  <div class="row col-md-2 col-md-offset-4">
-  <h2>Question #{{questionNum}}</h2>
-  {{question}}
-  <button id='nq'>New Question</button>
-  <form id='answer'>
-    <input type="text" name="answer">
-    <input type="submit" value="Submit">
-  </form>
-</div>
+  <div class="row col-md-6 col-md-offset-3 centered">
+    <h2>Question #{{questionNum}}</h2>
+    {{question}}
+    <button id='nq'>New Question</button>
+    <form id='answer'>
+      <input type="text" name="answer">
+      <input type="submit" value="Submit">
+    </form>
+  </div>
   {{feedback}}
 </template>
 
 <template name="results">
   <div class="col-md-2 col-md-offset-5">
-  <h2>Results</h2>
-  {{> reactiveTable settings=settings class="table table-bordered table-hover"}}
-</div>
+    <h2>Results</h2>
+    {{> reactiveTable settings=settings class="table table-bordered table-hover"}}
+  </div>
 </template>
 
 <template name="login">
   <div class="col-md-2 col-md-offset-5">
-  <form id="login-form" action="action">
+    <form id="login-form" action="action">
       <div>
         <input type="email" id="login-email" />
         <input type="password" id="login-password" />
         <input type="submit" id="login-button" value="Sign in" />
-     </div>
-   </form>
- </div>
+      </div>
+    </form>
+  </div>
 </template>
 
 <template name='admin'>
   <div class="col-md-2 col-md-offset-5">
-  <form id="new-user-form" action="action">
-    <div>
-      <p>
-        <h3>Add new user</h3>
-      </p>
-     <input type="username" id="account-username" />
-     <input type="password" id="account-password" />
-     <select id='account-role'>
-       <option value="teacher">Teacher</option>
-       <option value="student">Student</option>
-     </select>
-     <input type="submit" id="create-account" value="Create account" />
-     <p>
-       {{newUserFeedback}}
-     </p>
-   </div>
- </form>
- <form id="move-user-form" action="action">
-   <div>
-     <p>
-       <h3>Change user role</h3>
-     </p>
-    <input type="username" id="move-username" />
-    <select id='move-role'>
-      <option value="teacher">Teacher</option>
-      <option value="student">Student</option>
-    </select>
-    <input type="submit" id="add-user-to-group" value="Submit" />
-    <p>
-      {{moveToGroupFeedback}}
-    </p>
+    <form id="new-user-form" action="action">
+      <div>
+        <p>
+          <h3>Add new user</h3>
+        </p>
+        <input type="username" id="account-username" />
+        <input type="password" id="account-password" />
+        <select id='account-role'>
+          <option value="teacher">Teacher</option>
+          <option value="student">Student</option>
+        </select>
+        <input type="submit" id="create-account" value="Create account" />
+        <p>
+          {{newUserFeedback}}
+        </p>
+      </div>
+    </form>
+    <form id="move-user-form" action="action">
+      <div>
+        <p>
+          <h3>Change user role</h3>
+        </p>
+        <input type="username" id="move-username" />
+        <select id='move-role'>
+          <option value="teacher">Teacher</option>
+          <option value="student">Student</option>
+        </select>
+        <input type="submit" id="add-user-to-group" value="Submit" />
+        <p>
+          {{moveToGroupFeedback}}
+        </p>
+      </div>
+    </form>
   </div>
-</form>
-</div>
 </template>
 
 <template name='userlist'>
   <div class="col-md-2 col-md-offset-5">
-{{#each users}}
-  {{> user}}
-{{/each}}
-</div>
+    {{#each users}} {{> user}} {{/each}}
+  </div>
 </template>
 
 <template name="user">
