--- a/Arithmetic.html
+++ b/Arithmetic.html
@@ -1,27 +1,55 @@
 <head>
   <title>Arithmetic</title>
 </head>
-
 <body>
-  <div class="row col-md-6 col-md-offset-3 centered">
-    <h1>Arithmetic Quiz</h1>
-    <p>
-      {{> loginButtons}}
-    </p>
+  <div class="navbar navbar-default" role="navigation">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/">Arithmetic</a>
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    </div>
+    <div class="navbar-collapse collapse">
+      <ul class="nav navbar-nav">
+        <li>
+          <a href="/quiz">New Quiz</a>
+        </li>
+        <li>
+          <a href="/pastresults">Past Results</a>
+        </li>
+        {{#if isInRole 'teacher'}}
+          <li>
+            <a href="#">Teacher Area</a>
+          </li>
+        {{/if}}
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        {{> loginButtons}}
+      </ul>
+    </div>
   </div>
 </body>
 <template name="main-menu">
   <div class="row col-md-6 col-md-offset-3 centered">
     <a href="/quiz">
-      <div class="row menu-button"><button class="btn btn-success col-md-4 col-md-offset-4 centered" id="newquiz">Begin New Quiz</button></div>
+      <div class="row menu-button">
+        <button class="btn btn-success col-md-4 col-md-offset-4 centered" id="newquiz">Begin New Quiz</button>
+      </div>
     </a>
-    <a href="#">
-      <div class="row menu-button"><button class="btn btn-warning col-md-4 col-md-offset-4 centered" id="pastresults">View Past Results</button></div>
+    <a href="/pastresults">
+      <div class="row menu-button">
+        <button class="btn btn-warning col-md-4 col-md-offset-4 centered" id="pastresults">View Past Results</button>
+      </div>
     </a>
     {{#if isInRole 'teacher'}}
-    <a href="/admin">
-      <div class="row menu-button"><button class="btn btn-danger col-md-4 col-md-offset-4 centered" id="teacherarea">Teacher Area</button></div>
-    </a>
+      <a href="/admin">
+        <div class="row menu-button">
+          <button class="btn btn-danger col-md-4 col-md-offset-4 centered" id="teacherarea">Teacher Area</button>
+        </div>
+      </a>
     {{/if}}
   </div>
 </template>
@@ -47,15 +75,32 @@
 </template>
 
 <template name="login">
-  <div class="col-md-2 col-md-offset-5">
-    <form id="login-form" action="action">
-      <div>
-        <input type="email" id="login-email" />
-        <input type="password" id="login-password" />
-        <input type="submit" id="login-button" value="Sign in" />
-      </div>
-    </form>
-  </div>
+  <div id="login-box">{{> loginButtons}}</div>
+  <style>
+    #login-box li.dropdown {
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    #login-box li.dropdown .dropdown-menu {
+      float: none;
+      position: relative;
+      background-color: #ffffff;
+    }
+
+    #login-box li.dropdown .dropdown-menu .alert-danger {
+      color: #a94442;
+    }
+    #login-box li.dropdown .dropdown-menu:after {
+      visibility: hidden;
+      display: block;
+      font-size: 0;
+      content: " ";
+      clear: both;
+      height: 0;
+    }
+  </style>
 </template>
 
 <template name='admin'>
@@ -65,13 +110,13 @@
         <p>
           <h3>Add new user</h3>
         </p>
-        <input type="username" id="account-username" />
-        <input type="password" id="account-password" />
+        <input type="username" id="account-username"/>
+        <input type="password" id="account-password"/>
         <select id='account-role'>
           <option value="teacher">Teacher</option>
           <option value="student">Student</option>
         </select>
-        <input type="submit" id="create-account" value="Create account" />
+        <input type="submit" id="create-account" value="Create account"/>
         <p>
           {{newUserFeedback}}
         </p>
@@ -82,12 +127,12 @@
         <p>
           <h3>Change user role</h3>
         </p>
-        <input type="username" id="move-username" />
+        <input type="username" id="move-username"/>
         <select id='move-role'>
           <option value="teacher">Teacher</option>
           <option value="student">Student</option>
         </select>
-        <input type="submit" id="add-user-to-group" value="Submit" />
+        <input type="submit" id="add-user-to-group" value="Submit"/>
         <p>
           {{moveToGroupFeedback}}
         </p>
@@ -98,12 +143,64 @@
 
 <template name='userlist'>
   <div class="col-md-2 col-md-offset-5">
-    {{#each users}} {{> user}} {{/each}}
+    {{#each users}}
+      {{> user}}
+    {{/each}}
   </div>
 </template>
 
-<template name="user">
-  <li class="list-group-item">
-    {{username}}: {{group _id}}
-  </li>
+<template name='user'>
+<li class="list-group-item">
+  {{username}}:
+  {{group _id}}
+</li>
+</template>
+
+<template name='pastresults'>
+<div class="row col-md-6 col-md-offset-3 centered">
+  <div class='panel group'>
+    {{#each item in dates}}
+      <div class='panel panel-default'>
+        <div class='panel-heading accordion-toggle collapsed' data-toggle="collapse" data-target="#collapse{{@index}}">
+          <h4 class='panel-title' id="datetime">
+            {{dateconv item.date}}</h4>
+          <h4 class='panel-title' id="score">{{item.correct}}/10</h4>
+        </div>
+        <div id='collapse{{@index}}' class='panel-collapse collapse'>
+          <div class='panel-body'>asdasdasdasdasd</div>
+        </div>
+      </div>
+    {{/each}}
+  </div>
+</div>
+<style>
+  .panel-heading.accordion-toggle:after {
+    /* symbol for "opening" panels */
+    font-family: 'Glyphicons Halflings';
+    /* essential for enabling glyphicon */
+    content: "\e114";
+    /* adjust as needed, taken from bootstrap.css */
+    float: right;
+    position: relative;
+    bottom: 23px;
+    font-size: 15pt;
+    /* adjust as needed */
+    color: grey;
+    /* adjust as needed */
+  }
+  .panel-heading.accordion-toggle.collapsed:after {
+    /* symbol for "collapsed" panels */
+    content: "\e080";
+    /* adjust as needed, taken from bootstrap.css */
+  }
+  #datetime {
+    text-align: left;
+    float: left;
+  }
+  #score {
+    text-align: center;
+  }
+
+</style>
+
 </template>
