--- a/Arithmetic.html
+++ b/Arithmetic.html
@@ -1,6 +1,7 @@
 <head>
   <title>Arithmetic</title>
 </head>
+
 <body>
   <div class="navbar navbar-default" role="navigation">
     <div class="navbar-header">
@@ -21,9 +22,9 @@
           <a href="/pastresults">Past Results</a>
         </li>
         {{#if isInRole 'teacher'}}
-          <li>
-            <a href="#">Teacher Area</a>
-          </li>
+        <li>
+          <a href="#">Teacher Area</a>
+        </li>
         {{/if}}
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -45,19 +46,18 @@
       </div>
     </a>
     {{#if isInRole 'teacher'}}
-      <a href="/admin">
-        <div class="row menu-button">
-          <button class="btn btn-danger col-md-4 col-md-offset-4 centered" id="teacherarea">Teacher Area</button>
-        </div>
-      </a>
+    <a href="/admin">
+      <div class="row menu-button">
+        <button class="btn btn-danger col-md-4 col-md-offset-4 centered" id="teacherarea">Teacher Area</button>
+      </div>
+    </a>
     {{/if}}
   </div>
 </template>
 
 <template name="quiz">
   <div class="row col-md-6 col-md-offset-3 centered">
-    <h2>Question #{{questionNum}}</h2>
-    {{question}}
+    <h2>Question #{{questionNum}}</h2> {{question}}
     <button id='nq'>New Question</button>
     <form id='answer'>
       <input type="text" name="answer">
@@ -69,8 +69,7 @@
 
 <template name="results">
   <div class="col-md-2 col-md-offset-5">
-    <h2>Results</h2>
-    {{> reactiveTable settings=settings class="table table-bordered table-hover"}}
+    <h2>Results</h2> {{> reactiveTable settings=settings class="table table-bordered table-hover"}}
   </div>
 </template>
 
@@ -92,6 +91,7 @@
     #login-box li.dropdown .dropdown-menu .alert-danger {
       color: #a94442;
     }
+
     #login-box li.dropdown .dropdown-menu:after {
       visibility: hidden;
       display: block;
@@ -110,13 +110,13 @@
         <p>
           <h3>Add new user</h3>
         </p>
-        <input type="username" id="account-username"/>
-        <input type="password" id="account-password"/>
+        <input type="username" id="account-username" />
+        <input type="password" id="account-password" />
         <select id='account-role'>
           <option value="teacher">Teacher</option>
           <option value="student">Student</option>
         </select>
-        <input type="submit" id="create-account" value="Create account"/>
+        <input type="submit" id="create-account" value="Create account" />
         <p>
           {{newUserFeedback}}
         </p>
@@ -127,12 +127,12 @@
         <p>
           <h3>Change user role</h3>
         </p>
-        <input type="username" id="move-username"/>
+        <input type="username" id="move-username" />
         <select id='move-role'>
           <option value="teacher">Teacher</option>
           <option value="student">Student</option>
         </select>
-        <input type="submit" id="add-user-to-group" value="Submit"/>
+        <input type="submit" id="add-user-to-group" value="Submit" />
         <p>
           {{moveToGroupFeedback}}
         </p>
@@ -143,64 +143,66 @@
 
 <template name='userlist'>
   <div class="col-md-2 col-md-offset-5">
-    {{#each users}}
-      {{> user}}
-    {{/each}}
+    {{#each users}} {{> user}} {{/each}}
   </div>
 </template>
 
 <template name='user'>
-<li class="list-group-item">
-  {{username}}:
-  {{group _id}}
-</li>
+  <li class="list-group-item">
+    {{username}}: {{group _id}}
+  </li>
 </template>
 
 <template name='pastresults'>
-<div class="row col-md-6 col-md-offset-3 centered">
-  <div class='panel group'>
-    {{#each item in dates}}
+  <div class="row col-md-6 col-md-offset-3 centered">
+    <div class='panel group'>
+      {{#if dates}} {{#each item in dates}}
       <div class='panel panel-default'>
         <div class='panel-heading accordion-toggle collapsed' data-toggle="collapse" data-target="#collapse{{@index}}">
           <h4 class='panel-title' id="datetime">
-            {{dateconv item.date}}</h4>
+              {{dateconv item.date}}</h4>
           <h4 class='panel-title' id="score">{{item.correct}}/10</h4>
         </div>
         <div id='collapse{{@index}}' class='panel-collapse collapse'>
-          <div class='panel-body'>asdasdasdasdasd</div>
+          <div class='panel-body'>
+            {{> reactiveTable collection=item.data settings=(settings item.correct) class="table table-bordered table-hover"}}
+          </div>
         </div>
       </div>
-    {{/each}}
+      {{/each}} {{else}}
+      <h3>You have no results yet.</h3> {{/if}}
+    </div>
   </div>
-</div>
-<style>
-  .panel-heading.accordion-toggle:after {
-    /* symbol for "opening" panels */
-    font-family: 'Glyphicons Halflings';
-    /* essential for enabling glyphicon */
-    content: "\e114";
-    /* adjust as needed, taken from bootstrap.css */
-    float: right;
-    position: relative;
-    bottom: 23px;
-    font-size: 15pt;
-    /* adjust as needed */
-    color: grey;
-    /* adjust as needed */
-  }
-  .panel-heading.accordion-toggle.collapsed:after {
-    /* symbol for "collapsed" panels */
-    content: "\e080";
-    /* adjust as needed, taken from bootstrap.css */
-  }
-  #datetime {
-    text-align: left;
-    float: left;
-  }
-  #score {
-    text-align: center;
-  }
+  <style>
+    .panel-heading.accordion-toggle:after {
+      /* symbol for "opening" panels */
+      font-family: 'Glyphicons Halflings';
+      /* essential for enabling glyphicon */
+      content: "\e114";
+      /* adjust as needed, taken from bootstrap.css */
+      float: right;
+      position: relative;
+      bottom: 23px;
+      font-size: 15pt;
+      /* adjust as needed */
+      color: grey;
+      /* adjust as needed */
+    }
 
-</style>
+    .panel-heading.accordion-toggle.collapsed:after {
+      /* symbol for "collapsed" panels */
+      content: "\e080";
+      /* adjust as needed, taken from bootstrap.css */
+    }
+
+    #datetime {
+      text-align: left;
+      float: left;
+    }
+
+    #score {
+      text-align: center;
+    }
+  </style>
 
 </template>
