--- a/Arithmetic.html
+++ b/Arithmetic.html
@@ -23,7 +23,7 @@
         </li>
         {{#if isInRole 'teacher'}}
         <li>
-          <a href="#">Teacher Area</a>
+          <a href="/admin">Teacher Area</a>
         </li>
         {{/if}}
       </ul>
@@ -57,14 +57,40 @@
 
 <template name="quiz">
   <div class="row col-md-6 col-md-offset-3 centered">
-    <h2>Question #{{questionNum}}</h2> {{question}}
-    <button id='nq'>New Question</button>
+    <h2><small>Question #{{questionNum}}</small></h2>
+    <hr />
+    <h1>{{question}}</h1>
     <form id='answer'>
       <input type="text" name="answer">
       <input type="submit" value="Submit">
     </form>
   </div>
-  {{feedback}}
+  <style>
+  .grn {
+    background-color:#7FE368;
+    opacity: 20%;
+    -webkit-transition:background 10ms linear;
+    -moz-transition:background 10ms linear;
+    -o-transition:background 10ms linear;
+    transition:background 10ms linear;
+  }
+  .red {
+    background-color:#C50D22;
+    opacity: 20%;
+    -webkit-transition:background 10ms linear;
+    -moz-transition:background 10ms linear;
+    -o-transition:background 10ms linear;
+    transition:background 10ms linear;
+  }
+  .fadeout {
+    background-color: none;
+    -webkit-transition:background 1s ease-out;
+    -moz-transition:background 1s ease-out;
+    -o-transition:background 1s ease-out;
+    transition:background 1s ease-out;
+  }
+
+  </style>
 </template>
 
 <template name="results">
