--- a/Arithmetic.html
+++ b/Arithmetic.html
@@ -1,241 +1,261 @@
 <head>
-  <title>Arithmetic</title>
+    <title>Arithmetic</title>
 </head>
 
 <body>
-  <div class="navbar navbar-default" role="navigation">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/">Arithmetic</a>
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
+    <div class="navbar navbar-default" role="navigation">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="/">Arithmetic</a>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li>
+                    <a href="/quiz">New Quiz</a>
+                </li>
+                <li>
+                    <a href="/pastresults">Past Results</a>
+                </li>
+                {{#if isInRole 'teacher'}}
+                <li>
+                    <a href="/admin">Teacher Area</a>
+                </li>
+                {{/if}}
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                {{> loginButtons}}
+            </ul>
+        </div>
     </div>
-    <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <li>
-          <a href="/quiz">New Quiz</a>
-        </li>
-        <li>
-          <a href="/pastresults">Past Results</a>
-        </li>
-        {{#if isInRole 'teacher'}}
-        <li>
-          <a href="/admin">Teacher Area</a>
-        </li>
-        {{/if}}
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        {{> loginButtons}}
-      </ul>
-    </div>
-  </div>
 </body>
 <template name="main-menu">
-  <div class="row col-md-6 col-md-offset-3 centered">
-    <a href="/quiz">
-      <div class="row menu-button">
-        <button class="btn btn-success col-md-4 col-md-offset-4 centered" id="newquiz">Begin New Quiz</button>
-      </div>
-    </a>
-    <a href="/pastresults">
-      <div class="row menu-button">
-        <button class="btn btn-warning col-md-4 col-md-offset-4 centered" id="pastresults">View Past Results</button>
-      </div>
-    </a>
-    {{#if isInRole 'teacher'}}
-    <a href="/admin">
-      <div class="row menu-button">
-        <button class="btn btn-danger col-md-4 col-md-offset-4 centered" id="teacherarea">Teacher Area</button>
-      </div>
-    </a>
-    {{/if}}
-  </div>
+    <div class="row col-md-6 col-md-offset-3 centered">
+        <a href="/quiz">
+            <div class="row menu-button">
+                <button class="btn btn-success col-md-4 col-md-offset-4 centered" id="newquiz">Begin New Quiz</button>
+            </div>
+        </a>
+        <a href="/pastresults">
+            <div class="row menu-button">
+                <button class="btn btn-warning col-md-4 col-md-offset-4 centered" id="pastresults">View Past Results</button>
+            </div>
+        </a>
+        {{#if isInRole 'teacher'}}
+        <a href="/admin">
+            <div class="row menu-button">
+                <button class="btn btn-danger col-md-4 col-md-offset-4 centered" id="teacherarea">Teacher Area</button>
+            </div>
+        </a>
+        {{/if}}
+    </div>
 </template>
 
 <template name="quiz">
-  <div class="row col-md-6 col-md-offset-3 centered">
-    <h2><small>Question #{{questionNum}}</small></h2>
-    <hr />
-    <h1>{{question}}</h1>
-    <form id='answer'>
-      <input type="text" name="answer">
-      <input type="submit" value="Submit">
-    </form>
-  </div>
-  <style>
-  .grn {
-    background-color:#7FE368;
-    opacity: 20%;
-    -webkit-transition:background 10ms linear;
-    -moz-transition:background 10ms linear;
-    -o-transition:background 10ms linear;
-    transition:background 10ms linear;
-  }
-  .red {
-    background-color:#C50D22;
-    opacity: 20%;
-    -webkit-transition:background 10ms linear;
-    -moz-transition:background 10ms linear;
-    -o-transition:background 10ms linear;
-    transition:background 10ms linear;
-  }
-  .fadeout {
-    background-color: none;
-    -webkit-transition:background 1s ease-out;
-    -moz-transition:background 1s ease-out;
-    -o-transition:background 1s ease-out;
-    transition:background 1s ease-out;
-  }
+    <div class="row col-md-6 col-md-offset-3 centered">
+        <h2><small>Question #{{questionNum}}</small></h2>
+        <hr />
+        <h1>{{question}}</h1>
+        <form id='answer'>
+            <input type="text" name="answer">
+            <input type="submit" value="Submit">
+        </form>
+    </div>
+    <style>
+        .grn {
+            background-color: #7FE368;
+            opacity: 20%;
+            -webkit-transition: background 10ms linear;
+            -moz-transition: background 10ms linear;
+            -o-transition: background 10ms linear;
+            transition: background 10ms linear;
+        }
 
-  </style>
+        .red {
+            background-color: #C50D22;
+            opacity: 20%;
+            -webkit-transition: background 10ms linear;
+            -moz-transition: background 10ms linear;
+            -o-transition: background 10ms linear;
+            transition: background 10ms linear;
+        }
+
+        .fadeout {
+            background-color: none;
+            -webkit-transition: background 1s ease-out;
+            -moz-transition: background 1s ease-out;
+            -o-transition: background 1s ease-out;
+            transition: background 1s ease-out;
+        }
+    </style>
 </template>
 
 <template name="results">
-  <div class="col-md-2 col-md-offset-5">
-    <h2>Results</h2> {{> reactiveTable settings=settings class="table table-bordered table-hover"}}
-  </div>
+    <div class="col-md-2 col-md-offset-5">
+        <h2>Results</h2> {{> reactiveTable settings=settings class="table table-bordered table-hover"}}
+    </div>
 </template>
 
 <template name="login">
-  <div id="login-box">{{> loginButtons}}</div>
-  <style>
-    #login-box li.dropdown {
-      list-style-type: none;
-      padding: 0;
-      margin: 0;
-    }
+    <div id="login-box">{{> loginButtons}}</div>
+    <style>
+        #login-box li.dropdown {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
 
-    #login-box li.dropdown .dropdown-menu {
-      float: none;
-      position: relative;
-      background-color: #ffffff;
-    }
+        #login-box li.dropdown .dropdown-menu {
+            float: none;
+            position: relative;
+            background-color: #ffffff;
+        }
 
-    #login-box li.dropdown .dropdown-menu .alert-danger {
-      color: #a94442;
-    }
+        #login-box li.dropdown .dropdown-menu .alert-danger {
+            color: #a94442;
+        }
 
-    #login-box li.dropdown .dropdown-menu:after {
-      visibility: hidden;
-      display: block;
-      font-size: 0;
-      content: " ";
-      clear: both;
-      height: 0;
-    }
-  </style>
+        #login-box li.dropdown .dropdown-menu:after {
+            visibility: hidden;
+            display: block;
+            font-size: 0;
+            content: " ";
+            clear: both;
+            height: 0;
+        }
+    </style>
 </template>
 
 <template name='admin'>
-  <div class="col-md-2 col-md-offset-5">
-    <form id="new-user-form" action="action">
-      <div>
-        <p>
-          <h3>Add new user</h3>
-        </p>
-        <input type="username" id="account-username" />
-        <input type="password" id="account-password" />
-        <select id='account-role'>
-          <option value="teacher">Teacher</option>
-          <option value="student">Student</option>
-        </select>
-        <input type="submit" id="create-account" value="Create account" />
-        <p>
-          {{newUserFeedback}}
-        </p>
-      </div>
-    </form>
-    <form id="move-user-form" action="action">
-      <div>
-        <p>
-          <h3>Change user role</h3>
-        </p>
-        <input type="username" id="move-username" />
-        <select id='move-role'>
-          <option value="teacher">Teacher</option>
-          <option value="student">Student</option>
-        </select>
-        <input type="submit" id="add-user-to-group" value="Submit" />
-        <p>
-          {{moveToGroupFeedback}}
-        </p>
-      </div>
-    </form>
-  </div>
+    <div class="col-md-2 col-md-offset-5">
+        <form id="new-user-form" action="action">
+            <div>
+                <p>
+                    <h3>Add new user</h3>
+                </p>
+                <input type="username" id="account-username" />
+                <input type="password" id="account-password" />
+                <select id='account-role'>
+                    <option value="teacher">Teacher</option>
+                    <option value="student">Student</option>
+                </select>
+                <input type="submit" id="create-account" value="Create account" />
+                <p>
+                    {{newUserFeedback}}
+                </p>
+            </div>
+        </form>
+        <form id="move-user-form" action="action">
+            <div>
+                <p>
+                    <h3>Change user role</h3>
+                </p>
+                <input type="username" id="move-username" />
+                <select id='move-role'>
+                    <option value="teacher">Teacher</option>
+                    <option value="student">Student</option>
+                </select>
+                <input type="submit" id="add-user-to-group" value="Submit" />
+                <p>
+                    {{moveToGroupFeedback}}
+                </p>
+            </div>
+        </form>
+    </div>
 </template>
 
-<template name='userlist'>
-  <div class="col-md-2 col-md-offset-5">
-    {{#each users}} {{> user}} {{/each}}
-  </div>
+<template name='debug'>
+    <div class="col-md-2 col-md-offset-5">
+        <h2>Data Generator</h2>
+        <form id='generatedata'>
+            <input type="username" id="generatedata-user" />
+            <select id='generatedata-score'>
+                <option value=""></option>
+                <option value="0">0</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+            </select>
+            <input type="submit" id="generatedata-submit" value="Generate" />
+        </form>
+        <hr />
+        <h2>User List & Groups</h2> {{#each users}} {{> user}} {{/each}}
+    </div>
 </template>
 
 <template name='user'>
-  <li class="list-group-item">
-    {{username}}: {{group _id}}
-  </li>
+    <li class="list-group-item">
+        {{username}}: {{group _id}}
+    </li>
 </template>
 
 <template name='pastresults'>
-  <div class="row col-md-6 col-md-offset-3 centered">
-    <div class='panel group'>
-      {{#if dates}}
-      <h3>Progress</h3>
-      <div id="progChart" style="height:20vh">
-        {{> highchartsHelper chartId="progChart" chartObject=progChart}}
-      </div>
-      <hr style="margin-top: 0" />
-      <h3>Results</h3>
-      {{#each item in dates}}
-      <div class='panel panel-default'>
-        <div class='panel-heading accordion-toggle collapsed' data-toggle="collapse" data-target="#collapse{{@index}}">
-          <h4 class='panel-title' id="datetime">
+    <div class="row col-md-6 col-md-offset-3 centered">
+        <div class='panel group'>
+            {{#if dates}}
+            <h3>Progress</h3>
+            <div id="progChart" style="height:20vh">
+                {{> highchartsHelper chartId="progChart" chartObject=progChart}}
+            </div>
+            <hr style="margin-top: 0" />
+            <h3>Results</h3> {{#each item in dates}}
+            <div class='panel panel-default'>
+                <div class='panel-heading accordion-toggle collapsed' data-toggle="collapse" data-target="#collapse{{@index}}">
+                    <h4 class='panel-title' id="datetime">
               {{dateconv item.date}}</h4>
-          <h4 class='panel-title' id="score">{{item.correct}}/10</h4>
+                    <h4 class='panel-title' id="score">{{item.correct}}/10</h4>
+                </div>
+                <div id='collapse{{@index}}' class='panel-collapse collapse'>
+                    <div class='panel-body'>
+                        {{> reactiveTable collection=item.data settings=(settings item.correct) class="table table-bordered table-hover"}}
+                    </div>
+                </div>
+            </div>
+            {{/each}} {{else}}
+            <h3>You have no results yet.</h3> {{/if}}
         </div>
-        <div id='collapse{{@index}}' class='panel-collapse collapse'>
-          <div class='panel-body'>
-            {{> reactiveTable collection=item.data settings=(settings item.correct) class="table table-bordered table-hover"}}
-          </div>
-        </div>
-      </div>
-      {{/each}} {{else}}
-      <h3>You have no results yet.</h3> {{/if}}
     </div>
-  </div>
-  <style>
-    .panel-heading.accordion-toggle:after {
-      /* symbol for "opening" panels */
-      font-family: 'Glyphicons Halflings';
-      /* essential for enabling glyphicon */
-      content: "\e114";
-      /* adjust as needed, taken from bootstrap.css */
-      float: right;
-      position: relative;
-      bottom: 23px;
-      font-size: 15pt;
-      /* adjust as needed */
-      color: grey;
-      /* adjust as needed */
-    }
+    <style>
+        .panel-heading.accordion-toggle:after {
+            /* symbol for "opening" panels */
+            font-family: 'Glyphicons Halflings';
+            /* essential for enabling glyphicon */
+            content: "\e114";
+            /* adjust as needed, taken from bootstrap.css */
+            float: right;
+            position: relative;
+            bottom: 23px;
+            font-size: 15pt;
+            /* adjust as needed */
+            color: grey;
+            /* adjust as needed */
+        }
 
-    .panel-heading.accordion-toggle.collapsed:after {
-      /* symbol for "collapsed" panels */
-      content: "\e080";
-      /* adjust as needed, taken from bootstrap.css */
-    }
+        .panel-heading.accordion-toggle.collapsed:after {
+            /* symbol for "collapsed" panels */
+            content: "\e080";
+            /* adjust as needed, taken from bootstrap.css */
+        }
 
-    #datetime {
-      text-align: left;
-      float: left;
-    }
+        #datetime {
+            text-align: left;
+            float: left;
+        }
 
-    #score {
-      text-align: center;
-    }
-  </style>
+        #score {
+            text-align: center;
+        }
+    </style>
 
 </template>
