--- a/Arithmetic - Program/Arithmetic.html
+++ b/Arithmetic - Program/Arithmetic.html
@@ -56,29 +56,29 @@
 </template>
 
 <template name="quiz">
-  <div class="row col-md-6 col-md-offset-3 centered">
+  <div class="row col-md-6 col-md-offset-3 centered"> <!-- Apply the correct Bootstrap classes to create a new Grid row and center the content-->
     <h2>
-            <small>Question #{{questionNum}}</small>
+            <small>Question #{{questionNum}}</small>  <!-- Show the text 'Question', followed by the helper call for the question number -->
         </h2>
     <hr/>
-    <h1>{{question}}</h1>
-    <form id='answer'>
-      <input type="text" name="answer">
-      <input type="submit" value="Submit">
+    <h1>{{question}}</h1> <!-- Helper call for the question text-->
+    <form id='answer'> <!-- Create a new form for answer submission-->
+      <input type="text" name="answer"> <!-- Text box for the answer-->
+      <input type="submit" value="Submit"> <!-- Submit button for the answer-->
     </form>
   </div>
   <style>
-    .grn {
-      background-color: #7FE368;
-      opacity: 20%;
-      -webkit-transition: background 10ms linear;
+    .grn {  /* When the green background flash class is applied to the body tag */
+      background-color: #7FE368; /* Set the background to green */
+      opacity: 20%; /* Opacity of 20% */
+      -webkit-transition: background 10ms linear; /* Transitions for various browser CSS standards - 10ms linear transition into green */
       -moz-transition: background 10ms linear;
       -o-transition: background 10ms linear;
       transition: background 10ms linear;
     }
 
     .red {
-      background-color: #C50D22;
+      background-color: #C50D22; /*Same as above for the red (wrong) answer */
       opacity: 20%;
       -webkit-transition: background 10ms linear;
       -moz-transition: background 10ms linear;
@@ -86,9 +86,9 @@
       transition: background 10ms linear;
     }
 
-    .fadeout {
-      background-color: none;
-      -webkit-transition: background 1s ease-out;
+    .fadeout { /* Applied after the background colour tag to go back to white */
+      background-color: none; /* Remove background colour applied earlier */
+      -webkit-transition: background 1s ease-out; /* 1s ease-out transition back to white (so transition isn't as jagged) */
       -moz-transition: background 1s ease-out;
       -o-transition: background 1s ease-out;
       transition: background 1s ease-out;
